5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1679_1105.log
== TEST (2019-04-23 17:40:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:42:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:49:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'
if x == 'leao':
	msg = 'Lannister'
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:51:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'
if x == 'leao':
	msg = 'Lannister'
if x == 'veado':
	msg = 'Baratheon'
if x == 'dragao':
	msg = 'Targaryen'
	
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 15:55:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'
if x == 'leao':
	msg = 'Lannister'
if x == 'veado':
	msg = 'Baratheon'
if x == 'dragao':
	msg = 'Targaryen'
if x == 'rosa':
	msg = 'Tyrell'
if x == 'sol':
	msg = 'Martell'
if x == 'lula':
	msg = 'Grejoy'
if x == 'esfolado':
	msg = 'Bolton'
if x == 'turta':
	msg = 'Tully'
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:03:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'
if x == 'leao':
	msg = 'Lannister'
if x == 'veado':
	msg = 'Baratheon'
if x == 'dragao':
	msg = 'Targaryen'
if x == 'rosa':
	msg = 'Tyrell'
if x == 'sol':
	msg = 'Martell'
if x == 'lula':
	msg = 'Grejoy'
if x == 'esfolado':
	msg = 'Bolton'
if x == 'turta':
	msg = 'Tully'
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:03:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	msg = 'Stark'
if x == 'leao':
	msg = 'Lannister'
if x == 'veado':
	msg = 'Baratheon'
if x == 'dragao':
	msg = 'Targaryen'
if x == 'rosa':
	msg = 'Tyrell'
if x == 'sol':
	msg = 'Martell'
if x == 'lula':
	msg = 'Grejoy'
if x == 'esfolado':
	msg = 'Bolton'
if x == 'turta':
	msg = 'Tully'
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:01:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite sua casa: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:01:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:02:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
-- EXECUTION TIME:
0.124818
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Grejoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:

-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:02:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
	
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:02:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else
print("invalido")
	
-- ERROR:
File "XXXX", line 22
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:02:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else print("invalido")
	
-- ERROR:
File "XXXX", line 22
    else print("invalido")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:03:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
     else print("invalido")
	
-- ERROR:
File "XXXX", line 22
    else print("invalido")
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:03:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
	
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:04:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:04:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else:
	print('invalido')
-- EXECUTION TIME:
0.229245
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Grejoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:05:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:05:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if x == 'lobo':
	print('Stark')
elif x == 'leao':
	print('Lannister')
elif	x == 'veado':
	print('Baratheon')
elif x == 'dragao':
	print('Targaryen')
elif x == 'rosa':
	print('Tyrell')
elif x == 'sol':
	print('Martell')
elif x == 'lula':
	print('Grejoy')
elif x == 'esfolado':
	print('Bolton')
elif x == 'turta':
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:07:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:07:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- EXECUTION TIME:
0.14981
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Grejoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:07:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:09:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:09:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:09:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:09:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- EXECUTION TIME:
0.176182
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Grejoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:09:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Grejoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Grejoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:09:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Greyjoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- EXECUTION TIME:
0.12926
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:10:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Greyjoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('invalido')
-- OUTPUT:
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:10:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Greyjoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('Brasao invalido')
-- EXECUTION TIME:
0.197995
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:10:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input('digite seu brasao: ')
if (x == 'lobo'):
	print('Stark')
elif (x == 'leao'):
	print('Lannister')
elif	(x == 'veado'):
	print('Baratheon')
elif (x == 'dragao'):
	print('Targaryen')
elif (x == 'rosa'):
	print('Tyrell')
elif (x == 'sol'):
	print('Martell')
elif (x == 'lula'):
	print('Greyjoy')
elif (x == 'esfolado'):
	print('Bolton')
elif (x == 'turta'):
	print('Tully')
else:
	print('Brasao invalido')
-- OUTPUT:
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:15:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:15:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.145527
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:15:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
print("Entrada", x)
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:16:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
print("Entrada", x)
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.187987
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:16:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
print("Entrada", x)
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:17:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
print("Entrada:", x)
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:17:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("digite seu brasao: ")
print("Entrada:", x)
if (x == "lobo"):
	print("Casa: Stark")
elif (x == "leao"):
	print("Casa: Lannister")
elif	(x == "veado"):
	print("Casa: Baratheon")
elif (x == "dragao"):
	print("Casa: Targaryen")
elif (x == "rosa"):
	print("Casa: Tyrell")
elif (x == "sol"):
	print("Casa: Martell")
elif (x == "lula"):
	print("Casa: Greyjoy")
elif (x == "esfolado"):
	print("Casa: Bolton")
elif (x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.153734
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
